Fix span when too long projects

--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ body{
     width: 100%;
 }
 
+.sub-title span{
+    white-space: normal;
+    max-width: 50%;
+    text-align: right;
+}
+
 :root{
     --text-color: rgb(199, 199, 199);
     --title-color: white;
